src/test/ui/issues/issue-11374.stderr
error[E0308]: mismatched types
  --> $DIR/issue-11374.rs:26:15
   |
LL |     c.read_to(v);
   |               ^
   |               |
   |               expected `&mut [u8]`, found struct `Vec`
   |               help: consider mutably borrowing here: `&mut v`
   |
   = note: expected mutable reference `&mut [u8]`
                         found struct `Vec<_>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
